# isdn4k-utils

./: .gitignore  HOWTO  Makefile  NEWS  README  distexclude
FAQ/: .cvsignore  Makefile  Makefile.in  README  configure  configure.in  de-i4l-faq  eng-i4l-faq  i4lfaq-de.sgml  i4lfaq.sgml
FAQ/_example/: config.txt  ipfwadm.txt
FAQ/_howto/: 386-40.txt  cisco_config.txt  dialout.txt  dns.txt  dynamic_static.txt  lzscomp.txt  masquerade.txt  nokia7110_dialing.txt  pppbind.txt  pppcosts.txt  tcpip_stack_ms.txt  vbox_sound.txt  win95_modemd_inf.txt  xcept.txt  xp-howto.txt
FAQ/doc/: make.README  syntax.txt
FAQ/tutorial/: EN-i4l.sgml
FAQ2/: README  eng-i4l-faq.sgml
Mini-FAQ/: Makefile  htmlify.pl  isdn-faq.txt
act2000/: Makefile.in  aclocal.m4  actctrl.c  actctrl.man.in  configure  configure.ac  configure.in
ant-phone/: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  TODO  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac
ant-phone/doc/: Makefile.am  Makefile.in  ant-phone.1
ant-phone/po/: LINGUAS  Makevars  POTFILES.in  ant-phone.pot  de.gmo  de.po  en@boldquot.gmo  en@boldquot.po  en@quot.gmo  en@quot.po  fr.gmo  fr.po  nl.gmo  nl.po  ro.gmo  ro.po  sv.gmo  sv.po  tr.gmo  tr.po  vi.gmo  vi.po
ant-phone/src/: Makefile.am  Makefile.in  aboutlogo.xpm  ant-phone.c  backspace.xpm  callerid.c  callerid.h  calleridlexer.c  calleridlexer.l  calleridparser.c  calleridparser.h  calleridparser.y  client.c  client.h  controlpad.c  controlpad.h  fxgenerator.c  fxgenerator.h  g711.c  g711.h  globals.h  gtk.c  gtk.h  gtksettings.c  gtksettings.h  hangup.xpm  icon16x16.xpm  icon32x32.xpm  icon48x48.xpm  icon64x64.xpm  in.xpm  isdn.c  isdn.h  isdnlexer.c  isdnlexer.h  isdnlexer.l  isdnparser.c  isdnparser.h  isdnparser.y  isdntree.c  (+22 more)
areacode/: Makefile.in  actest.c  areacode.c  areacode.doc  areacode.h
avmb1/: .cvsignore  Makefile  Makefile.am  Makefile.in  avmcapictrl.c  avmcapictrl.man  avmcapictrl.man.in  configure  configure.ac  configure.in
capi20/: .cvsignore  COPYING.LIB  Makefile.am  Makefile.in  aclocal.m4  capi20.c  capi20.h  capi_debug.h  capi_mod.h  capi_mod_fritzbox.c  capi_mod_fritzbox.h  capi_mod_rcapi.c  capi_mod_std.c  capicmd.h  capidyn.c  capifunc.c  capiutils.h  config.h.in  configure  configure.ac  configure.in  convert.c  ltmain.sh
capi20.new/: Makefile.in  README  capi20.c  capi20.h  capi20.pc.in  capi_mod.h  capi_mod_fritzbox.c  capi_mod_fritzbox.h  capi_mod_rcapi.c  capi_mod_std.c  capidyn.c  configure  convert.c
capi20.old/: Makefile.in  aclocal.m4  capi20.c  capi20.h  capidyn.c  capiutils.h  config.guess  config.sub  configure  configure.in  convert.c  ltconfig  ltmain.sh  mkinstalldirs
capifax/: Makefile.am  Makefile.cvs  Makefile.in  acinclude.m4  aclocal.m4  c20msg.c  c20msg.h  capi.c  capi.h  capifax.1  capifax.c  capifaxrcvd.8  capifaxrcvd.c  config.h.in  configure  configure.ac  configure.in  connect.c  connect.h  contr.c  contr.h  data.c  data.h  fax.c  fax.h  id.c  id.h  init.c  init.h  msg.c
capiinfo/: Makefile.am  Makefile.cvs  Makefile.in  capiinfo.8  capiinfo.c  config.h.in  configure  configure.ac  configure.in
capiinit/: Makefile.am  Makefile.in  capi.conf  capiinit.8  capiinit.8.in  capiinit.c  config.h.in  configure  configure.ac  configure.in
diehl/: Makefile.in  configure  configure.in  diehlctrl.c  diehlctrl.man.in
divertctrl/: Makefile.in  configure  configure.ac  configure.in  divertctrl.c  divertctrl.man  divertctrl.man.in
doc/: Configure.help  Makefile.am  Makefile.in  configure  configure.ac  configure.in  isdn_audio.4.in  isdn_audio.man.in  isdn_cause.man.in  isdnctrl.4.in  isdnctrl.man.in  isdninfo.man.in  isdnrate.man  rate-files.man  ttyI.4  ttyI.man.in
eicon/: CHANGES  INSTALL  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac  configure.in  divaload.man  divaload.man.in  divalog.man  divalog.man.in  divalogd.man  divalogd.man.in  eiconctrl.c  eiconctrl.man.in  linuxcfg.c  linuxcfg.h
eicon/divautil/: divalogdchr.c  lindiload.c  lindownload.c  linload.c  xlog.c
eicon/firmware/: eicon_firm.tgz  te_1tr6.pm  te_1tr6.sm  te_etsi.pm  te_etsi.sm
eicon/include/: eicon.h
etc/: Makefile.disabled  ackernel.m4
eurofile/: .Config.in  .cvsignore  CHANGES  COPYING  INSTALL  Makefile  README  README.CVS  Rules.make.in  TODO  configure  configure.in
hisax/: Makefile.in  configure  configure.ac  configure.in  hisaxctrl.c  hisaxctrl.man.in
icn/: Makefile.in  config.h.in  configure  configure.ac  configure.in  icnctrl.c  icnctrl.man  icnctrl.man.in
imon/: Makefile.in  config.h.in  configure  configure.ac  configure.in  imon.c  imon.man  imon.man.in
imontty/: Changelog  Makefile  README  imontty.8.in  imontty.c  imontty.h
ipppcomp/: README.LZS  isdn_lzscomp.c
ipppd/: .Config.in  Makefile  Makefile.ORIG  Makefile.in  Makefile.linux  NOTES.IPPPD  README  README.RADIUS  README.cbcp.ORIG  README.mschap80.ORIG  TODO.4.MP  auth.c  cbcp.c  ccp.c  ccp.h  chap.c  chap_ms.c  chap_ms.h  config.h.in  configure  configure.ac  configure.in  fsm.c  ipcp.c  ipcp.h  ippp-filter-compat.h  ipppd.8  ipppd.h  ipppd.man.in  ipxcp.c  ipxcp.h  lcp.c  lcp.h  magic.c  main.c  md4.c  options.c  patchlevel.h  pathnames.h  pathnames.h.in  (+8 more)
ipppstats/: Makefile  Makefile.in  configure  configure.ac  configure.in  ipppstats.8  ipppstats.c  ipppstats.man.in
iprofd/: Makefile.in  configure  configure.ac  configure.in  iprofd.c  iprofd.man  iprofd.man.in
isdnctrl/: .isdnctrl_timru.man.in  Makefile.in  README.libipt  acconfig.h  aclocal.m4  config.h.in  configure  configure.ac  configure.in  ctrlconf.c  ctrlconf.h  ctrltimru.c  isdn_dwabclib.c  isdnctrl.c  isdnctrl.h  isdnctrl.man  isdnctrl.man.in  libipt_DWISDN.c  libipt_ISDNDIAL.c  libipt_dwisdn.c  patch-netfilter-1.1.2_isdn
isdnlog/: .Config.in  .country-alias  .cvsignore  BUGS  ChangeLog  Config.in  FAQ  Makefile  Makefile.in  NEWS  README  README.Internationalization  TODO  aclocal.m4  configure  configure.ac  configure.in  policy.h.in  rate-at.dat.src  rate-de.dat.src  sonderrufnummern.dat.bz2  vorwahl.dat.bz2  zone-at-1001.gdbm  (+9 more)
(+564 files in other folders)
