dnl Process this file with autoconf to produce a configure script.
AC_INIT(de-i4l-faq)

dnl Set default installation directory
TARGET_DIR=./out

dnl Checks for programs.
AC_PROG_INSTALL
AC_PATH_PROG(C_ZIP, zip,,$PATH:/usr/sbin:/sbin:/usr/local/bin)
AC_PATH_PROG(C_GZIP, gzip,,$PATH:/usr/sbin:/sbin:/usr/local/bin)
AC_PATH_PROG(C_PERL, perl,,$PATH:/usr/sbin:/sbin:/usr/local/bin)

dnl Check where to install.
AC_ARG_WITH(dest,[  --with-dest=DIR         set installation directory], \
	TARGET_DIR="$withval",)

AC_SUBST(TARGET_DIR)
AC_OUTPUT(Makefile)
