dnl Process this file with autoconf to produce a configure script.
AC_INIT(capiinit.c)
AM_INIT_AUTOMAKE(capiinit, 1.0)
AC_PREFIX_DEFAULT(/)

CONFIG_SBINDIR$=${CONFIG_CARD_SBINDIR:-"/sbin"}


dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_CC

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(linux/capi.h,,
	[AC_MSG_ERROR([Missing $ac_hdr. Kernel source installed?])])
AC_CHECK_HEADERS(capi20.h)

dnl Checks for typedefs, structures, and compiler characteristics.

AC_SUBST(INSTALL)
AC_SUBST(CONFIG_SBINDIR)
AC_SUBST(CONFIG_MANDIR)
AC_SUBST(CONFIG_FIRMWAREDIR)
AM_CONFIG_HEADER(config.h)
AC_OUTPUT(Makefile)
