dnl Process this file with autoconf to produce a configure script.
AC_INIT(icnctrl.c)
AC_PREFIX_DEFAULT(/usr)

I4LCONFDIR=${I4LCONFDIR:-"/etc/isdn"}
MANDATE=`grep CHECKIN icnctrl.man.in | awk '{print $4}'`

dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_CC

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h sys/ioctl.h unistd.h)

dnl Find current kernel source
dnl done by dereferencing the symbolic link /usr/include/linux
dnl and then stripping off include/linux from the result.

AC_CHECK_HEADERS(linux/isdn.h,\
	KERNELDIR="/usr/include/`find /usr/include/linux -maxdepth 0 -printf '%l\n' | sed -e s@include/linux@@`", \
    AC_MSG_ERROR("Missing linux/isdn.h. Kernel source installed?"))


dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_FUNC_MMAP

dnl Check, if user wants dump option for debugging
AC_ARG_ENABLE(dump,--enable-dump        Enable dump feature for debugging,\
	DEBUGVAR=-D__DEBUGVAR__)

AC_SUBST(INSTALL)
AC_SUBST(KERNELDIR)
AC_SUBST(DEBUGVAR)
AC_SUBST(MANDATE)
AC_SUBST(I4LCONFDIR)
AC_SUBST(I4LVERSION)
AC_OUTPUT(Makefile icnctrl.man)
