dnl Process this file with autoconf to produce a configure script.
AC_INIT(isdnctrl.c)
AC_PREFIX_DEFAULT(/usr)

I4LCONFDIR=`eval echo ${CONFIG_I4LCONFDIR:-"/etc/isdn"}`
I4LCONFFILE=`eval echo ${CONFIG_CONFFILE:-"/etc/isdn"}`
I4LVERSION=${I4LVERSION:-"?.?"}
KINCLUDE=${CONFIG_KERNELDIR:-"/usr"}/include
MANDATE=`grep CHECKIN isdnctrl.man.in | awk '{print $4}'`

dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_CC

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(sys/ioctl.h unistd.h)
AC_CHECK_HEADER(linux/isdn.h,,AC_MSG_ERROR("\nMissing linux/isdn.h. Kernel source installed?"))
AC_CHECK_HEADER(linux/isdnif.h,,AC_MSG_ERROR("\nMissing linux/isdnif.h. Kernel source installed?"))

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.
AC_CHECK_LIB(dbm, dbm_open, DBMLIB=-ldbm; AC_DEFINE(HAVE_LIBDBM),
  AC_CHECK_LIB(gdbm, gdbm_open, DBMLIB=-lgdbm; AC_DEFINE(HAVE_LIBGDBM)))
AC_TYPE_SIGNAL
AC_CHECK_TRIGGERCPS
AC_CHECK_CISCOK

AC_SUBST(INSTALL)
AC_SUBST(DBMLIB)
AC_SUBST(MANDATE)
AC_SUBST(I4LCONFDIR)
AC_SUBST(I4LCONFFILE)
AC_SUBST(I4LVERSION)
AC_SUBST(KINCLUDE)
AC_CONFIG_HEADER(config.h)
AC_OUTPUT(Makefile isdnctrl.man .isdnctrl_conf.man)
